<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/transition"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layoutType"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/tahoma"
            android:text="@string/in_what_areas_do_you_need_assistance"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_18sdp" />

        <LinearLayout
            android:id="@+id/layoutType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/bg_stroke_border"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/btnNaturalDisasters"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:paddingHorizontal="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/tahoma"
                    android:gravity="center_vertical"
                    android:text="@string/natural_disasters"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_15sdp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_next" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_gray_border" />

            <RelativeLayout
                android:id="@+id/btnMedical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:paddingHorizontal="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/tahoma"
                    android:gravity="center_vertical"
                    android:text="@string/medical"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_15sdp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_next" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_gray_border" />

            <RelativeLayout
                android:id="@+id/btnEducation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:paddingHorizontal="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/tahoma"
                    android:gravity="center_vertical"
                    android:text="@string/education"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_15sdp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_next" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_gray_border" />

            <RelativeLayout
                android:id="@+id/btnAccident"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:paddingHorizontal="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/tahoma"
                    android:gravity="center_vertical"
                    android:text="@string/accident"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_15sdp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_next" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_gray_border" />

            <RelativeLayout
                android:id="@+id/btnMissing"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:paddingHorizontal="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/tahoma"
                    android:gravity="center_vertical"
                    android:text="@string/missing"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_15sdp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_next" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_gray_border" />

            <RelativeLayout
                android:id="@+id/btnLonelyOldPeople"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:paddingHorizontal="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/tahoma"
                    android:gravity="center_vertical"
                    android:text="@string/lonely_old_people"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_15sdp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_next" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_gray_border" />

            <RelativeLayout
                android:id="@+id/btnCommunity"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:paddingHorizontal="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/tahoma"
                    android:gravity="center_vertical"
                    android:text="@string/community"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_15sdp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_next" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>